# coding-challenges

./: .gitignore  README.md
crontabTool/crontabTool/: bun.lockb  package.json
crontabTool/crontabTool/src/: app.html
crontabTool/crontabTool/src/components/: CronForm.svelte
crontabTool/crontabTool/src/routes/: +page.svelte
crontabTool/crontabTool/src/utils/: MonthEnum.ts  WeekEnum.ts  functions.ts
disdaccbot/: challenges.json  disdaccbot.go  go.mod  go.sum
passwordManager/password_manager/: Cargo.toml  passwords.db
passwordManager/password_manager/src/: main.rs  templates.rs
passwordManager/password_manager/templates/: base.html  index.html
uniqTool/: go.mod  test.txt  uniqTool  uniqTool.go  wcTool
wcTool/: go.mod  test.txt  wcTool  wcTool.go
webServer/: go.mod  webServer.go
webServer/www/: about.html  index.html
