[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.5"
askama = "0.12.0"
tokio = { version = "1.39.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
